<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/ok_icon"
            android:background="@drawable/ic_success" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvStatusTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:text="@string/all_done" />

        <TextView
            android:id="@+id/tvStatusSubtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/welcome_to_the_family"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <!--<Button
            android:id="@+id/buttonOk"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/button_background"
            android:text="@android:string/ok"
            android:textColor="@color/colorPrimary" />-->


        <Button
            android:id="@+id/buttonOk"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@android:string/ok"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>




    <!--<LinearLayout-->
        <!--style="?android:attr/buttonBarStyle"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
        <!--android:padding="16dp">-->

        <!--<Button-->
            <!--android:id="@+id/buttonCancel"-->
            <!--style="?android:attr/buttonBarButtonStyle"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_marginEnd="8dp"-->
            <!--android:layout_weight="1"-->
            <!--android:background="@drawable/button_background"-->
            <!--android:clickable="true"-->
            <!--android:focusable="true"-->
            <!--android:foreground="?attr/selectableItemBackgroundBorderless"-->
            <!--android:text="@android:string/cancel"-->
            <!--android:textColor="@color/colorPrimary" />-->

        <!--<Button-->
            <!--android:id="@+id/buttonOk"-->
            <!--style="?android:attr/buttonBarButtonStyle"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_marginStart="8dp"-->
            <!--android:layout_weight="1"-->
            <!--android:background="@drawable/button_background"-->
            <!--android:clickable="true"-->
            <!--android:focusable="true"-->
            <!--android:foreground="?attr/selectableItemBackgroundBorderless"-->
            <!--android:text="@android:string/ok"-->
            <!--android:textColor="@color/colorPrimary" />-->

    <!--</LinearLayout>-->

</LinearLayout>